# desktop-reminders

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: utils.py
